# CubePython

./: .env.example  .gitignore  CLAUDE.md  DOCS.md  README.md  pyproject.toml  setup.sh  setup_backend.sh  setup_scripts.sh  start.sh
backend/: .gitignore  pyproject.toml  requirements.txt  run.py
backend/app/: main.py
backend/app/api/: cards.py  cubes.py  health.py  recommenders.py
backend/app/core/: __init__.py  config.py  database.py
backend/app/models/: __init__.py  card.py  cube.py  recommender.py
backend/app/services/: card_database.py  cube_database.py
backend/app/services/recommender/: __init__.py  base.py  collaborative_filtering.py  utils.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: Card.css  Card.tsx  CardPiles.css  CardPiles.tsx  CardPilesTab.tsx  CardTab.css  CardTab.tsx  CubeDetail.css  CubeDetail.tsx  CubeList.css  CubeList.tsx  CubeTab.css  CubeTab.tsx  CubeViewer.css  CubeViewer.tsx  CubeViewerTab.tsx  Tabs.css  Tabs.tsx
frontend/src/services/: api.ts
frontend/src/types/: cube.ts
scripts/: inspect_cube.py  inspect_search.py  load_cube_data.py  pyproject.toml  requirements.txt  test_card_database.py
