[project]
name = "cubepython-backend"
version = "0.1.0"
description = "Backend API for CubePython MTG cube recommender"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "sqlmodel==0.0.22",
    "aiosqlite==0.20.0",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "httpx==0.28.1",
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
